fixed the text so that it wraps inside the box

--- a/style.css
+++ b/style.css
@@ -31,4 +31,5 @@ body, html {
     position: relative;
     padding: 10% 10% 10% 10%;
     overflow: auto;
+    word-wrap:break-word;
 } 
